# book-api-fastapi-sqlalchemy-postgres

./: .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
migrations/: 1__new_book.sql  2__deleted_flag.sql
src/: database.py  main.py  migrator.py  model.py  schema.py  test_main.py
src/api/: app.py  config.py  database.py  migrator.py  model.py  schema.py  test_app.py  test_model.py
src/book/: app.py  database.py  migrator.py  model.py  schema.py  test_app.py  test_model.py
