[project]
name = "book-api"
version = "1.0.0"

requires-python = ">=3.10"

dependencies = [
  "python-dotenv==1.0.0",
  "uvicorn==0.25.0",
  "fastapi==0.105.0",
  "SQLAlchemy==2.0.23",
  "psycopg==3.1.16",
]

[project.optional-dependencies]
dev = [
  "mypy==1.8.0",
  "httpx==0.26.0",
]

[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
