[project]
name = "book-api"
version = "1.0.0"

requires-python = ">=3.10"

dependencies = [
  "python-dotenv==1.0.0",
  "uvicorn==0.25.0",
  "fastapi==0.105.0",
  "SQLAlchemy==2.0.23",
  "psycopg==3.1.16",
]

[project.optional-dependencies]
dev = [
  "mypy==1.8.0",
  "httpx==0.26.0",
  "coverage==7.3.4",
  "ruff==0.1.9",
]

[project.scripts]
start = "api.app:run"

[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["E712"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_missing_imports = true
ignore_missing_imports = true
incremental = false
